--- a/pwnable-syscall.html
+++ b/pwnable-syscall.html
@@ -55,6 +55,15 @@
             padding: 40px 24px;
         }
 
+        .meme-image {
+            width: 100%;
+            max-width: 460px;
+            display: block;
+            margin: 24px auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
         header {
             margin-bottom: 64px;
             padding-bottom: 32px;
@@ -306,6 +315,7 @@
     </header>
 
     <article>
+
         <img src="images/pwnable-banner.png" alt="banner" class="banner" />
 
         <h2>Challenge Description</h2>
@@ -850,6 +860,8 @@ EUID: 0
 Must_san1tize_Us3r_p0int3r</code></pre>
 
         <p>Finally :)</p>
+
+        <img src="images/dobby-syscall.png" alt="dobby" class="meme-image" />
 
         <h2>References</h2>
         <ul>
