--- a/pwnable-syscall.html
+++ b/pwnable-syscall.html
@@ -57,7 +57,7 @@
 
         .meme-image {
             width: 100%;
-            max-width: 460px;
+            max-width: 100%;
             display: block;
             margin: 24px auto;
             border-radius: 8px;
