--- a/index.html
+++ b/index.html
@@ -337,6 +337,16 @@
         </div>
 
         <div class="writeup-item">
+            <a href="pwnable-bof.html">
+                <div class="writeup-header">
+                    <span class="writeup-title">pwnable.kr: bof</span>
+                    <span class="writeup-date">Nov 2025</span>
+                </div>
+                <p class="writeup-desc">Buffer overflow with stack canary enabled</p>
+            </a>
+        </div>
+
+        <div class="writeup-item">
             <a href="pwnable-leg.html">
                 <div class="writeup-header">
                     <span class="writeup-title">pwnable.kr: leg</span>
