img and resources

--- a/pwnable-horcruxes.html
+++ b/pwnable-horcruxes.html
@@ -683,7 +683,14 @@ How many EXP did you earned? : $ 1620280667
 The_M4gic_sp3l1_is_Avada_Ked4vra</code></pre>
 
         <p>Yippy 2 :) </p>
+        <img src="images/horcrux.png" alt="horcrux" class="meme-image" />
 
+
+        <h2>Sources to learn ROP</h2>
+        <ul>
+            <li>pwn college ROP Dojo: <a href="https://pwn.college/program-security/return-oriented-programming" target="_blank" rel="noreferrer">https://pwn.college/program-security/return-oriented-programming</a></li>
+            <li>ROP Emporium: <a href="https://ropemporium.com/" target="_blank" rel="noreferrer">https://ropemporium.com/</a></li>
+        </ul>
     </article>
 </div>
 
